--- a/roles/vmcreation/tasks/main.yml
+++ b/roles/vmcreation/tasks/main.yml
@@ -19,29 +19,56 @@
     msg: "VM {{ vm_name }} already exists! Stopping playbook."
   when: vm_info.status is defined
 
-- name: Create disk image if it doesn't exist
-  community.libvirt.virt_volume:
-    name: "{{ vm_name }}.qcow2"
-    pool: "{{ pool }}"
-    state: present
-    xml: |
-      <volume>
-        <name>{{ vm_name }}.qcow2</name>
-        <capacity unit="G">{{ vm_disk_size }}</capacity>
-        <target>
-          <format type="{{ vm_disk_format }}"/>
-        </target>
-      </volume>
-  when: vm_info.status is not defined
+# Ensure VM folder exists
+- name: Make VM directory
+  file:
+    path: "{{ storage_path }}/{{ vm_name }}"
+    state: directory
+    mode: '0755'
+  become: true
+
+# Download base Fedora cloud image if missing
+- name: Download Fedora cloud image
+  ansible.builtin.get_url:
+    url: https://mirror.atl.adaptivedatanetworks.com/fedora/linux/releases/38/Cloud/x86_64/images/Fedora-Cloud-Base-38-1.6.x86_64.qcow2 
+    dest: "{{ storage_path }}/{{ vm_name }}.qcow2"
+    mode: '0644'
+    force: no
+  become: true
+
+# Create VM disk from Fedora cloud image
+- name: Create VM disk from base Fedora image
+  ansible.builtin.command: >
+    qemu-img create -f qcow2 -F qcow2 -b {{ storage_path }}/{{ vm_name }}.qcow2
+    {{ storage_path }}/{{ vm_name }}/{{ vm_name }}.qcow2 {{ vm_disk_size }}G
+  become: true
+  args:
+    creates: "{{ storage_path }}/{{ vm_name }}/{{ vm_name }}.qcow2"
+
+# Prepare cloud-init ISO
+- name: Prepare cloud-init files
+  import_tasks: cloud_init.yml
+
+# - name: Create disk image if it doesn't exist
+#   community.libvirt.virt_volume:
+#     name: "{{ vm_name }}.qcow2"
+#     pool: "{{ pool }}"
+#     state: present
+#     xml: |
+#       <volume>
+#         <name>{{ vm_name }}.qcow2</name>
+#         <capacity unit="G">{{ vm_disk_size }}</capacity>
+#         <target>
+#           <format type="{{ vm_disk_format }}"/>
+#         </target>
+#       </volume>
+#   when: vm_info.status is not defined
 
 - name: Generate libvirt XML configuration
   ansible.builtin.template:
     src: vm_template.xml.j2
     dest: "/tmp/{{ vm_name }}.xml"
   when: vm_info.status is not defined
-
-- name: Prepare cloud-init ISO
-  import_tasks: cloud_init.yml
 
 - name: Define VM
   ansible.builtin.command: virsh -c qemu:///system define /tmp/{{ vm_name }}.xml
@@ -72,3 +99,10 @@
 - name: Show VM status
   ansible.builtin.debug:
     msg: "VM '{{ vm_name }}' is {{ vm_info.status }}"
+
+# Clean up temporary XML file
+- name: Remove temporary XML
+  file:
+    path: "/tmp/{{ vm_name }}.xml"
+    state: absent
+  ignore_errors: true
