--- a/roles/vmcreation/tasks/cloud_init.yml
+++ b/roles/vmcreation/tasks/cloud_init.yml
@@ -19,17 +19,10 @@
     mode: '0644'
   become: true
 
-- name: Detect primary network interface
-  ansible.builtin.command: ip -o -4 route show to default
-  register: default_route
-
-- set_fact:
-    primary_iface: "{{ default_route.stdout.split()[4] }}"
-
-- name: Render network-config
+- name: Render network-data
   ansible.builtin.template:
     src: network-data.j2
-    dest: "{{storage_path}}/{{ vm_name }}/network-data"
+    dest: "{{storage_path}}/{{ vm_name }}/network-config"
     mode: '0644'
   become: true
 
