--- a/roles/vmcreation/tasks/main.yml
+++ b/roles/vmcreation/tasks/main.yml
@@ -8,10 +8,9 @@
     vm_vcpus: "{{ item.vm_vcpus }}"
     vm_disk_size: "{{ item.vm_disk_size }}"
     vm_os_variant: "{{ item.vm_os_variant }}"
-    storage_path: "{{ item.storage_path }}"
-    vm_cloud_iso: "{{ item.vm_cloud_iso }}"
-    vm_disk_path: "{{ item.vm_disk_path }}"
     vm_disk_format: "{{ item.vm_disk_format }}"
+    storage_path: "{{ item.storage_path }}/{{ item.vm_name }}.{{ item.vm_disk_format }}"
+    vm_cloud_iso: "{{ item.vm_cloud_iso }}"
     vm_ip: "{{ item.vm_ip }}"
     vm_gateway: "{{ item.vm_gateway }}"
     vm_user: "{{ item.vm_user }}"
