--- a/vars/vm_specs.yml
+++ b/vars/vm_specs.yml
@@ -9,7 +9,7 @@ vms:
     #storage_path: "/mnt/storage/dorra"
     storage_path: "/mnt/data/dorra"
     vm_cloud_iso: "https://mirror.atl.adaptivedatanetworks.com/fedora/linux/releases/38/Cloud/x86_64/images/Fedora-Cloud-Base-38-1.6.x86_64.qcow2"
-    vm_disk_path: "{{storage_path}}/{{ vm_name }}.qcow2"
+    #vm_disk_path: "{{storage_path}}/{{ vm_name }}.qcow2"
     vm_disk_format: "qcow2"
     # Network
     vm_ip: 192.168.88.123
@@ -26,7 +26,7 @@ vms:
     #storage_path: "/mnt/storage/dorra"
     storage_path: "/mnt/data/dorra"
     vm_cloud_iso: "https://mirror.atl.adaptivedatanetworks.com/fedora/linux/releases/38/Cloud/x86_64/images/Fedora-Cloud-Base-38-1.6.x86_64.qcow2"
-    vm_disk_path: "{{storage_path}}/{{ vm_name }}.qcow2"
+    #vm_disk_path: "{{storage_path}}/{{ vm_name }}.qcow2"
     vm_disk_format: "qcow2"
     # Network
     vm_ip: 192.168.88.133
