--- a/roles/vmcreation/tasks/main.yml
+++ b/roles/vmcreation/tasks/main.yml
@@ -63,8 +63,8 @@
     mode: '0755'
   become: true
 
-# Download base Fedora cloud image if missing
-- name: Download Fedora cloud image
+# Download base cloud image if missing
+- name: Download cloud image
   ansible.builtin.get_url:
     url: "{{ vm_cloud_iso }}" 
     dest: "{{ storage_path }}/{{ vm_name }}.qcow2"
